--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "less": "^4.3.0",
+    "less-loader": "^12.3.0",
     "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
