--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,25 @@
-.DS_Store
-node_modules
+# 依赖目录
+/node_modules
+/.pnp
+.pnp.js
+
+# 测试生成文件
+/coverage
+
+# 生产构建文件
 /dist
 
-
-# local env files
+# 本地环境文件
 .env.local
 .env.*.local
 
-# Log files
+# 日志文件
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Editor directories and files
+# 编辑器目录和文件
 .idea
 .vscode
 *.suo
@@ -21,3 +27,34 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+# 系统文件
+.DS_Store
+Thumbs.db
+
+# Vue CLI 生成文件
+/src/serviceWorker.js
+
+# 缓存和生成文件
+/.cache
+.history
+*.tmp
+*.bak
+
+# 本地开发服务器
+.history
+
+# 类型Script 编译输出
+*.tsbuildinfo
+
+# ESLint 和 Prettier 缓存
+.eslintcache
+.prettiercache
+
+# Cypress 测试生成文件
+/cypress/screenshots
+/cypress/videos
+
+# Vite 缓存
+.cache
+.temp
